Episódio Especial do Podcast LowOpsCast no TDC

--- a/_posts/2024-06-23-Podcast.md
+++ b/_posts/2024-06-23-Podcast.md
@@ -9,27 +9,98 @@ tags: [Eventos Presenciais, TDC, LowOpsCast]
 
 ## Introdução
 
-No maior evento de desenvolvimento de software da América Latina, The Developer’s Conference (TDC), tive a oportunidade de gravar um episódio especial do meu podcast [LowOpsCast](https://open.spotify.com/show/0U4kcZT2Cwn4CqQGg4Ywcj?si=f725a4c467144597). Com o apoio da Ambev Tech, entrevistei profissionais incríveis que compartilharam suas experiências e insights sobre como foi a sensação de palestrar no TDC e outros que coordenadoram, e também das edições passadas. Este artigo irei contar como foi a experiencia.
+No maior evento de desenvolvimento de software da América Latina, The Developer’s Conference (TDC), tive a oportunidade de gravar um episódio especial do meu podcast [LowOpsCast](https://open.spotify.com/show/0U4kcZT2Cwn4CqQGg4Ywcj?si=f725a4c467144597). Com o apoio da Ambev Tech, entrevistei profissionais incríveis que compartilharam suas experiências e insights sobre a sensação de palestrar no TDC e coordenar as trilhas, além de discussões sobre edições passadas. Neste artigo, vou contar como foi essa experiência.
 
 ## O que é The Developer’s Conference?
 
 O The Developer’s Conference é o maior encontro de profissionais de tecnologia do Brasil. Este evento dinâmico conecta organizadores de meetups, palestrantes, empresas e patrocinadores, criando uma plataforma única que empodera o ecossistema tecnológico local. Durante o TDC, são apresentadas as tendências mais atuais e relevantes por meio de mais de dez trilhas paralelas diárias, cada uma organizada por especialistas da área.
 
+![](https://stoblobcertificados011.blob.core.windows.net/imagens-blog/posts/Podcast-Ambev-Tech/00.JPG)
+
 ## A Experiência de Gravação
 
-Com o apoio essencial da Ambev Tech, foi sediado um espaço de estúdio de gravação no evento. Durante o episódio, entrevistei duas turmas de participantes, cada uma composta por três convidados. O bate papo foi repleto de história inspiradoras e insights para futuros palestrantes do TDC.
+Com o apoio essencial da Ambev Tech, foi criado um espaço de estúdio de gravação no evento. Durante o episódio, entrevistei duas turmas de participantes, cada uma composta por três convidados. O bate-papo foi repleto de histórias inspiradoras e insights para futuros palestrantes do TDC.
+
+![](https://stoblobcertificados011.blob.core.windows.net/imagens-blog/posts/Podcast-Ambev-Tech/01.JPG)
 
 ### Primeira Entrevista: Erivaldo, Claudio e Marina
 
-![Primeira Entrevista](mnt/data/IMG_1710.JPG)
+![](https://stoblobcertificados011.blob.core.windows.net/imagens-blog/posts/Podcast-Ambev-Tech/02.JPG)
+![](https://stoblobcertificados011.blob.core.windows.net/imagens-blog/posts/Podcast-Ambev-Tech/03.JPG)
+![](https://stoblobcertificados011.blob.core.windows.net/imagens-blog/posts/Podcast-Ambev-Tech/04.JPG)
+![](https://stoblobcertificados011.blob.core.windows.net/imagens-blog/posts/Podcast-Ambev-Tech/05.JPG)
+![](https://stoblobcertificados011.blob.core.windows.net/imagens-blog/posts/Podcast-Ambev-Tech/06.JPG)
+![](https://stoblobcertificados011.blob.core.windows.net/imagens-blog/posts/Podcast-Ambev-Tech/07.JPG)
+![](https://stoblobcertificados011.blob.core.windows.net/imagens-blog/posts/Podcast-Ambev-Tech/08.JPG)
+![](https://stoblobcertificados011.blob.core.windows.net/imagens-blog/posts/Podcast-Ambev-Tech/09.JPG)
+![](https://stoblobcertificados011.blob.core.windows.net/imagens-blog/posts/Podcast-Ambev-Tech/10.JPG)
+![](https://stoblobcertificados011.blob.core.windows.net/imagens-blog/posts/Podcast-Ambev-Tech/11.JPG)
+![](https://stoblobcertificados011.blob.core.windows.net/imagens-blog/posts/Podcast-Ambev-Tech/12.JPG)
+![](https://stoblobcertificados011.blob.core.windows.net/imagens-blog/posts/Podcast-Ambev-Tech/13.JPG)
+![](https://stoblobcertificados011.blob.core.windows.net/imagens-blog/posts/Podcast-Ambev-Tech/14.JPG)
+![](https://stoblobcertificados011.blob.core.windows.net/imagens-blog/posts/Podcast-Ambev-Tech/15.JPG)
+![](https://stoblobcertificados011.blob.core.windows.net/imagens-blog/posts/Podcast-Ambev-Tech/16.JPG)
+![](https://stoblobcertificados011.blob.core.windows.net/imagens-blog/posts/Podcast-Ambev-Tech/17.JPG)
+![](https://stoblobcertificados011.blob.core.windows.net/imagens-blog/posts/Podcast-Ambev-Tech/18.JPG)
+![](https://stoblobcertificados011.blob.core.windows.net/imagens-blog/posts/Podcast-Ambev-Tech/19.JPG)
+![](https://stoblobcertificados011.blob.core.windows.net/imagens-blog/posts/Podcast-Ambev-Tech/20.JPG)
+![](https://stoblobcertificados011.blob.core.windows.net/imagens-blog/posts/Podcast-Ambev-Tech/21.JPG)
+![](https://stoblobcertificados011.blob.core.windows.net/imagens-blog/posts/Podcast-Ambev-Tech/22.JPG)
+![](https://stoblobcertificados011.blob.core.windows.net/imagens-blog/posts/Podcast-Ambev-Tech/23.JPG)
+![](https://stoblobcertificados011.blob.core.windows.net/imagens-blog/posts/Podcast-Ambev-Tech/24.JPG)
+![](https://stoblobcertificados011.blob.core.windows.net/imagens-blog/posts/Podcast-Ambev-Tech/25.JPG)
+![](https://stoblobcertificados011.blob.core.windows.net/imagens-blog/posts/Podcast-Ambev-Tech/26.JPG)
+![](https://stoblobcertificados011.blob.core.windows.net/imagens-blog/posts/Podcast-Ambev-Tech/27.JPG)
+![](https://stoblobcertificados011.blob.core.windows.net/imagens-blog/posts/Podcast-Ambev-Tech/28.JPG)
+![](https://stoblobcertificados011.blob.core.windows.net/imagens-blog/posts/Podcast-Ambev-Tech/29.JPG)
 
-Nesta primeira rodada, contou com Erivaldo, Claudio e Marina que compartilharam suas perspectivas sobre
+Nesta primeira rodada, contou com Erivaldo, Claudio e Marina.
 
 ### Segunda Entrevista: Amin, Rafael e Thiago
 
-![Segunda Entrevista](mnt/data/IMG_1784.JPG)
+![](https://stoblobcertificados011.blob.core.windows.net/imagens-blog/posts/Podcast-Ambev-Tech/30.JPG)
+![](https://stoblobcertificados011.blob.core.windows.net/imagens-blog/posts/Podcast-Ambev-Tech/31.JPG)
+![](https://stoblobcertificados011.blob.core.windows.net/imagens-blog/posts/Podcast-Ambev-Tech/32.JPG)
+![](https://stoblobcertificados011.blob.core.windows.net/imagens-blog/posts/Podcast-Ambev-Tech/33.JPG)
+![](https://stoblobcertificados011.blob.core.windows.net/imagens-blog/posts/Podcast-Ambev-Tech/34.JPG)
+![](https://stoblobcertificados011.blob.core.windows.net/imagens-blog/posts/Podcast-Ambev-Tech/35.JPG)
+![](https://stoblobcertificados011.blob.core.windows.net/imagens-blog/posts/Podcast-Ambev-Tech/36.JPG)
+![](https://stoblobcertificados011.blob.core.windows.net/imagens-blog/posts/Podcast-Ambev-Tech/37.JPG)
+![](https://stoblobcertificados011.blob.core.windows.net/imagens-blog/posts/Podcast-Ambev-Tech/38.JPG)
+![](https://stoblobcertificados011.blob.core.windows.net/imagens-blog/posts/Podcast-Ambev-Tech/39.JPG)
+![](https://stoblobcertificados011.blob.core.windows.net/imagens-blog/posts/Podcast-Ambev-Tech/40.JPG)
+![](https://stoblobcertificados011.blob.core.windows.net/imagens-blog/posts/Podcast-Ambev-Tech/41.JPG)
+![](https://stoblobcertificados011.blob.core.windows.net/imagens-blog/posts/Podcast-Ambev-Tech/42.JPG)
+![](https://stoblobcertificados011.blob.core.windows.net/imagens-blog/posts/Podcast-Ambev-Tech/43.JPG)
+![](https://stoblobcertificados011.blob.core.windows.net/imagens-blog/posts/Podcast-Ambev-Tech/44.JPG)
+![](https://stoblobcertificados011.blob.core.windows.net/imagens-blog/posts/Podcast-Ambev-Tech/45.JPG)
+![](https://stoblobcertificados011.blob.core.windows.net/imagens-blog/posts/Podcast-Ambev-Tech/46.JPG)
+![](https://stoblobcertificados011.blob.core.windows.net/imagens-blog/posts/Podcast-Ambev-Tech/47.JPG)
+![](https://stoblobcertificados011.blob.core.windows.net/imagens-blog/posts/Podcast-Ambev-Tech/48.JPG)
+![](https://stoblobcertificados011.blob.core.windows.net/imagens-blog/posts/Podcast-Ambev-Tech/49.JPG)
+![](https://stoblobcertificados011.blob.core.windows.net/imagens-blog/posts/Podcast-Ambev-Tech/50.JPG)
+![](https://stoblobcertificados011.blob.core.windows.net/imagens-blog/posts/Podcast-Ambev-Tech/51.JPG)
+![](https://stoblobcertificados011.blob.core.windows.net/imagens-blog/posts/Podcast-Ambev-Tech/52.JPG)
+![](https://stoblobcertificados011.blob.core.windows.net/imagens-blog/posts/Podcast-Ambev-Tech/53.JPG)
+![](https://stoblobcertificados011.blob.core.windows.net/imagens-blog/posts/Podcast-Ambev-Tech/54.JPG)
+![](https://stoblobcertificados011.blob.core.windows.net/imagens-blog/posts/Podcast-Ambev-Tech/55.JPG)
+![](https://stoblobcertificados011.blob.core.windows.net/imagens-blog/posts/Podcast-Ambev-Tech/56.JPG)
+![](https://stoblobcertificados011.blob.core.windows.net/imagens-blog/posts/Podcast-Ambev-Tech/57.JPG)
+![](https://stoblobcertificados011.blob.core.windows.net/imagens-blog/posts/Podcast-Ambev-Tech/58.JPG)
+![](https://stoblobcertificados011.blob.core.windows.net/imagens-blog/posts/Podcast-Ambev-Tech/59.JPG)
+![](https://stoblobcertificados011.blob.core.windows.net/imagens-blog/posts/Podcast-Ambev-Tech/60.JPG)
+![](https://stoblobcertificados011.blob.core.windows.net/imagens-blog/posts/Podcast-Ambev-Tech/61.JPG)
+![](https://stoblobcertificados011.blob.core.windows.net/imagens-blog/posts/Podcast-Ambev-Tech/62.JPG)
+![](https://stoblobcertificados011.blob.core.windows.net/imagens-blog/posts/Podcast-Ambev-Tech/63.JPG)
+![](https://stoblobcertificados011.blob.core.windows.net/imagens-blog/posts/Podcast-Ambev-Tech/64.JPG)
+![](https://stoblobcertificados011.blob.core.windows.net/imagens-blog/posts/Podcast-Ambev-Tech/65.JPG)
+![](https://stoblobcertificados011.blob.core.windows.net/imagens-blog/posts/Podcast-Ambev-Tech/66.JPG)
+![](https://stoblobcertificados011.blob.core.windows.net/imagens-blog/posts/Podcast-Ambev-Tech/67.JPG)
+![](https://stoblobcertificados011.blob.core.windows.net/imagens-blog/posts/Podcast-Ambev-Tech/68.JPG)
+![](https://stoblobcertificados011.blob.core.windows.net/imagens-blog/posts/Podcast-Ambev-Tech/69.JPG)
+![](https://stoblobcertificados011.blob.core.windows.net/imagens-blog/posts/Podcast-Ambev-Tech/70.JPG)
 
-Na segunda parte do nosso episódio, conversei com Amin, Rafael e Thiago. Eles nos falaram sobre suas trajetórias profissionais
+Na segunda parte do nosso episódio, conversei com Amin, Rafael e Thiago.
 
 ## Bastidores e Momentos Marcantes
 
@@ -37,13 +108,18 @@ Na segunda parte do nosso episódio, conversei com Amin, Rafael e Thiago. Eles n
 
 As fotos dos bastidores dizem por si só. A energia do TDC e o suporte da Ambev Tech criaram um ambiente perfeito para a troca de conhecimentos e ideias. Cada momento foi capturado em fotos, que ilustram a dedicação e entusiasmo de todos os envolvidos.
 
+![](https://stoblobcertificados011.blob.core.windows.net/imagens-blog/posts/Podcast-Ambev-Tech/71.JPG)
+![](https://stoblobcertificados011.blob.core.windows.net/imagens-blog/posts/Podcast-Ambev-Tech/72.JPG)
+![](https://stoblobcertificados011.blob.core.windows.net/imagens-blog/posts/Podcast-Ambev-Tech/73.JPG)
+
 ## Apoiadores e Parceiros
 
-Gostaria de agradecer especialmente à Ambev Tech e toda equipe do TDC por seu apoio. Eles não apenas patrocinaram o estúdio de gravação, mas também contribuíram para a qualidade e o alcance do nosso conteúdo.
+Gostaria de agradecer especialmente à Ambev Tech e toda equipe do TDC pelo seu apoio. Eles não apenas patrocinaram o estúdio de gravação, mas também contribuíram para a qualidade e o alcance do nosso conteúdo.
+
 
 ## Conclusão
 
-O episódio especial do podcast gravado no The Developer’s Conference foi uma experiência única e enriquecedora. Agradeõ a todos os nossos convidados e apoiadores que tornaram isso possível. Fique atento para mais episódios e continue nos acompanhando para insights de como alavancar sua carreira.
+O episódio especial do podcast gravado no The Developer’s Conference foi uma experiência única e enriquecedora. Agradeço a todos os nossos convidados e apoiadores que tornaram isso possível. Fique atento para mais episódios e continue nos acompanhando para insights sobre como alavancar sua carreira.
 
 ---
 
