--- a/_posts/2024-06-23-Podcast.md
+++ b/_posts/2024-06-23-Podcast.md
@@ -13,7 +13,7 @@ No maior evento de desenvolvimento de software da América Latina, The Developer
 
 ## O que é The Developer’s Conference?
 
-O The Developer’s Conference é o maior encontro de profissionais de tecnologia do Brasil. Este evento dinâmico conecta organizadores de meetups, palestrantes, empresas e patrocinadores, criando uma plataforma única que empodera o ecossistema tecnológico local. Durante o TDC, são apresentadas as tendências mais atuais e relevantes por meio de mais de dez trilhas paralelas diárias, cada uma organizada por especialistas da área.
+O The Developer’s Conference [TDC](https://thedevconf.com/tdc/2024/index.html)é o maior encontro de profissionais de tecnologia do Brasil. Este evento dinâmico conecta organizadores de meetups, palestrantes, empresas e patrocinadores, criando uma plataforma única que empodera o ecossistema tecnológico local. Durante o TDC, são apresentadas as tendências mais atuais e relevantes por meio de mais de dez trilhas paralelas diárias, cada uma organizada por especialistas da área.
 
 ![](https://stoblobcertificados011.blob.core.windows.net/imagens-blog/posts/Podcast-Ambev-Tech/00.JPG)
 
