--- a/_posts/2024-06-25-talk-tdc.md
+++ b/_posts/2024-06-25-talk-tdc.md
@@ -10,20 +10,17 @@ tags: [Eventos Presenciais, TDC, Talk]
 ### 
 
 #### Introdução
-No TDC Florianópolis 2024, tive a honra de palestrar na [Trilha de Arquitetura de Dados](https://thedevconf.com/tdc/2024/florianopolis/trilha-arquitetura-de-dados), ao lado de meu amigo [Cláudio Filipe Lima Rapôso](https://www.linkedin.com/in/cfraposo/). Nossa palestra focou na Plataformização de Arquitetura de Dados utilizando Backstage.io e IaC (Infrastructure as Code), trazendo à tona a importância de uma gestão eficiente e automatizada na infraestrutura de dados.
+No TDC Florianópolis 2024, tive a honra de palestrar na [Trilha de Arquitetura de Dados](https://thedevconf.com/tdc/2024/florianopolis/trilha-arquitetura-de-dados), ao lado de meu amigo [Cláudio Filipe Lima Rapôso](https://www.linkedin.com/in/cfraposo/). Nossa palestra focou na Plataformização de Arquitetura de Dados utilizando Backstage.io e IaC (Infrastructure as Code), trazendo a importância de uma gestão eficiente e automatizada na infraestrutura.
 
 #### Data e Local
 - **Data:** Sexta-feira, 14 de Junho de 2024
 - **Local:** CentroSul, Av. Governador Gustavo Richard, 850 / Centro Florianópolis - SC
 
 #### O Evento
-O [TDC] (https://thedevconf.com/tdc/2024/index.html) é um evento de destaque no cenário tecnológico brasileiro, oferecendo uma plataforma para profissionais de TI compartilharem conhecimentos, experiências e inovações. Este ano, a trilha de Arquitetura de Dados destacou-se ao explorar como os dados podem ser estrategicamente arquitetados para impulsionar operações empresariais e decisões estratégicas.
+O [TDC](https://thedevconf.com/tdc/2024/index.html) é um evento de destaque no cenário tecnológico brasileiro, oferecendo um local para profissionais de TI compartilharem conhecimentos, experiências e inovações.
 
 #### O Tema da Palestra
-Nossa apresentação abordou a plataformização da arquitetura de dados com Backstage.io e Terraform, ferramentas essenciais para a centralização e automação dos serviços relacionados aos dados. Discutimos como:
-
-- **Backstage.io**: Centraliza e visualiza todos os serviços de dados, proporcionando uma visão unificada e facilitando a gestão dos pipelines de dados.
-- **Terraform**: Automatiza a implantação e gerenciamento da infraestrutura de dados, garantindo consistência e escalabilidade.
+Nossa apresentação abordou a plataformização da arquitetura de dados com Backstage.io e Terraform, ferramentas essenciais para a centralização e automação dos serviços relacionados aos dados.
 
 #### Análise da Palestra
 A palestra explorou a visão e os desafios da criação de uma plataforma unificada para gerenciar infraestruturas de cloud, destacando a complexidade crescente dessas arquiteturas e a necessidade de consistência e eficiência entre múltiplas equipes. Demonstramos como o uso de Infraestrutura como Código (IaC) com ferramentas como Terraform e Backstage.io pode facilitar essa unificação e governança centralizada.
@@ -43,7 +40,7 @@ Palestrar no TDC Floripa foi uma experiência enriquecedora. Além de compartilh
 #### Conclusão
 Eventos como o TDC são cruciais para o avanço da tecnologia no Brasil, oferecendo uma plataforma para troca de conhecimentos e experiências. A trilha de Arquitetura de Dados, em particular, destacou-se por sua relevância e pelos insights valiosos compartilhados pelos palestrantes. Saio deste evento com novas ideias e uma maior motivação para continuar explorando e inovando no campo da arquitetura de dados.
 
-Agradeço a todos os organizadores, participantes e especialmente ao Cláudio Filipe Lima Rapôso por colaborar nesta jornada. Que venham os próximos desafios e oportunidades!
+Que venham os próximos desafios e oportunidades!
 
 ---
 
