--- a/_posts/2024-06-25-talk-tdc.md
+++ b/_posts/2024-06-25-talk-tdc.md
@@ -61,7 +61,7 @@ Palestrar no TDC Floripa foi uma experiência enriquecedora. Além de compartilh
 ![](https://stoblobcertificados011.blob.core.windows.net/imagens-blog/posts/tdc/19.JPG)
 
 #### Conclusão
-Eventos como o TDC são cruciais para o avanço da tecnologia no Brasil, oferecendo uma plataforma para troca de conhecimentos e experiências. A trilha de Arquitetura de Dados, em particular, destacou-se por sua relevância e pelos insights valiosos compartilhados pelos palestrantes. Saio deste evento com novas ideias e uma maior motivação para continuar explorando e inovando no campo da arquitetura de dados.
+Eventos como o TDC são cruciais para o avanço da tecnologia no Brasil, oferecendo uma plataforma para troca de conhecimentos e experiências. A trilha de Arquitetura de Dados, em particular, destacou-se por sua relevância e pelos insights valiosos compartilhados pelos palestrantes.
 
 Que venham os próximos desafios e oportunidades!
 
