--- a/_posts/2023-10-30-eventos.md
+++ b/_posts/2023-10-30-eventos.md
@@ -3,8 +3,8 @@ layout: post
 title: "Minhas Experiências em Eventos de Tecnologia Presenciais"
 author: rafaferreira011
 #date: 2023-10-27 18:30:00 -500
-categories: [Eventos Presenciais, Listagem]
-tags: [Eventos, Presenciais]
+categories: [Registro Eventos Presenciais]
+tags: [Registro Eventos Presenciais]
 ---
 
 Olá pessoal! Quero compartilhar com vocês algumas das incríveis experiências que tive participando de eventos de tecnologia presenciais. Esses eventos foram oportunidades únicas para aprender, fazer networking e me manter atualizado sobre as últimas tendências tecnológicas. Vamos lá!
