--- a/_posts/2024-03-15-youtube.md
+++ b/_posts/2024-03-15-youtube.md
@@ -13,6 +13,9 @@ Nesta seção do blog, compartilho minha jornada nas plataformas YouTube pelos c
 
 [![LowOps Channel](https://stoblobcertificados011.blob.core.windows.net/imagens-blog/posts/Youtube.png)](https://www.youtube.com/@LowOps-Channel)
 
+## #05 De Seminarista católico para MVP - Marcelo Gonçalves
+[![#05 De Seminarista católico para MVP - Marcelo Gonçalves](https://img.youtube.com/vi/EwQxFjh6f4o/0.jpg)](https://www.youtube.com/watch?v=EwQxFjh6f4o)
+
 ## #04 Episodio com Rodrigo Paliosa
 [![#04 Episodio com Rodrigo Paliosa](https://img.youtube.com/vi/FyhURlTbyyU/0.jpg)](https://www.youtube.com/watch?v=FyhURlTbyyU&t=10s)
 
