--- a/_posts/2024-03-27-spotify.md
+++ b/_posts/2024-03-27-spotify.md
@@ -17,6 +17,9 @@ Neste blog post, compartilho minha jornada na plataforma Spotify através do Pod
 
 ### Episódios Destacados
 
+#### #05 De Seminarista católico para MVP - Marcelo Gonçalves
+[![#05 De Seminarista católico para MVP - Marcelo Gonçalves](https://stoblobcertificados011.blob.core.windows.net/imagens-blog/spotify/05.png)](https://open.spotify.com/episode/3HdgAOXsRELFZZug4Gcj3T?si=0ec7d00fa2e041ae&nd=1&dlsi=448cb47b419848d4)
+
 #### #04 Episodio com Rodrigo Paliosa
 [![#04 Episodio com Rodrigo Paliosa](https://stoblobcertificados011.blob.core.windows.net/imagens-blog/spotify/04.png)](https://open.spotify.com/episode/7ixUPv4Nu3u0KaxFre3vUg?si=a38678cad63844df2)
 
