--- a/_posts/2024-06-23-Podcast.md
+++ b/_posts/2024-06-23-Podcast.md
@@ -19,7 +19,7 @@ O The Developer’s Conference [TDC](https://thedevconf.com/tdc/2024/index.html)
 
 ## A Experiência de Gravação
 
-Com o apoio essencial da Ambev Tech, foi criado um espaço de estúdio de gravação no evento. Durante o episódio, entrevistei duas turmas de participantes, cada uma composta por três convidados. O bate-papo foi repleto de histórias inspiradoras e insights para futuros palestrantes do TDC.
+Foi criado um espaço de estúdio de gravação no evento. Durante o episódio, entrevistei duas turmas de participantes, cada uma composta por três convidados. O bate-papo foi repleto de histórias inspiradoras e insights para futuros palestrantes do TDC.
 
 ### Primeira Entrevista: Erivaldo, Claudio e Marina
 
@@ -105,7 +105,7 @@ As fotos dos bastidores dizem por si só. A energia do TDC e o suporte da Ambev 
 
 ## Apoiadores e Parceiros
 
-Gostaria de agradecer especialmente à Ambev Tech e toda equipe do TDC pelo seu apoio. Eles não apenas patrocinaram o estúdio de gravação, mas também contribuíram para a qualidade e o alcance do nosso conteúdo.
+Gostaria de agradecer à Ambev Tech e toda equipe do TDC pelo seu apoio. Eles não apenas patrocinaram o estúdio de gravação, mas também contribuíram para a qualidade e o alcance do nosso conteúdo.
 
 ![](https://stoblobcertificados011.blob.core.windows.net/imagens-blog/posts/Podcast-Ambev-Tech/01.JPG)
 
