--- a/_posts/2024-06-25-talk-tdc.md
+++ b/_posts/2024-06-25-talk-tdc.md
@@ -60,6 +60,9 @@ Palestrar no TDC Floripa foi uma experiência enriquecedora. Além de compartilh
 ![](https://stoblobcertificados011.blob.core.windows.net/imagens-blog/posts/tdc/18.JPG)
 ![](https://stoblobcertificados011.blob.core.windows.net/imagens-blog/posts/tdc/19.JPG)
 
+#### Certificado
+![](https://stoblobcertificados011.blob.core.windows.net/imagens-blog/posts/tdc/20.png)
+
 #### Conclusão
 Eventos como o TDC são cruciais para o avanço da tecnologia no Brasil, oferecendo uma plataforma para troca de conhecimentos e experiências. A trilha de Arquitetura de Dados, em particular, destacou-se por sua relevância e pelos insights valiosos compartilhados pelos palestrantes.
 
