--- a/_posts/2024-03-15-youtube.md
+++ b/_posts/2024-03-15-youtube.md
@@ -13,6 +13,9 @@ Nesta seção do blog, compartilho minha jornada nas plataformas YouTube pelos c
 
 [![LowOps Channel](https://stoblobcertificados011.blob.core.windows.net/imagens-blog/posts/Youtube-Banner.png)](https://www.youtube.com/@LowOps-Channel)
 
+## #07 De Veterinária a Cloud Architect com Paula Santos
+[![# 07 De Veterinária a Cloud Architect com Paula Santos](https://img.youtube.com/vi/7wMKP9VS3E4/0.jpg)](https://www.youtube.com/watch?v=7wMKP9VS3E4)
+
 ## #06 Episódio Especial TDC Floripa 2024
 [![#06 Episódio Especial TDC Floripa 2024](https://img.youtube.com/vi/VtKMTnQ2P_o/0.jpg)](https://www.youtube.com/watch?v=VtKMTnQ2P_o&t)
 
@@ -37,6 +40,9 @@ Nesta seção do blog, compartilho minha jornada nas plataformas YouTube pelos c
 # Azure Floripa
 
 [![Azure Floripa](https://stoblobcertificados011.blob.core.windows.net/imagens-blog/posts/azurefloripa.png)](https://www.youtube.com/@AzureFloripa)
+
+## Desvendando o Service Principal x Managed Identities no Entra ID
+[![Desvendando o Service Principal x Managed Identities no Entra ID](https://img.youtube.com/vi/lxxyxDwvsDU/0.jpg)](https://www.youtube.com/watch?v=lxxyxDwvsDU)
 
 ## Trajetória Internacional - Do queijo minas ao queijo Gouda
 [![Trajetória Internacional - Do queijo minas ao queijo Gouda](https://img.youtube.com/vi/Ne-76V9XvxA/0.jpg)](https://www.youtube.com/watch?v=Ne-76V9XvxA)
