--- a/_posts/2023-11-06-mentoria.md
+++ b/_posts/2023-11-06-mentoria.md
@@ -11,9 +11,9 @@ Estou empolgado para compartilhar minha experiência como voluntário no Projeto
 
 ![](https://stoblobcertificados011.blob.core.windows.net/imagens-blog/posts/mentor.jpeg)
 
-Como mentor neste projeto, dediquei-me a ajudar pessoas a traçarem caminhos promissores no mundo da tecnologia. Através de orientação personalizada, compartilhei conhecimento, dicas e insights sobre as tendências de mercado, capacitando os mentorados a desenvolverem suas habilidades e alcançarem seus objetivos profissionais.
+O Projeto de Mentoria de Carreira do Canal da Cloud é uma iniciativa sem fins lucrativos que conta com a colaboração da comunidade técnica de TI para ajudar pessoas que desejam se desenvolver com tecnologia. Como voluntário neste projeto, eu me esforço para ajudar pessoas a traçar caminhos promissores na indústria de tecnologia. Através de orientação personalizada, compartilho conhecimentos, dicas e insights sobre tendências de mercado, ajudando os mentorados a desenvolver suas habilidades e alcançar seus objetivos profissionais.
 
-Acredito firmemente que o acesso à educação e orientação é fundamental para que todos prosperem no cenário tecnológico em constante evolução. Ao fazer parte do Projeto de Mentoria de Carreira do Canal da Cloud, tive o privilégio de ir além do meu papel profissional e causar um impacto significativo na vida de pessoas que aspiram se destacar no mundo da tecnologia.
+Acredito que o acesso à educação e orientação é essencial para que todos possam prosperar no cenário tecnológico em constante evolução. Ao fazer parte deste projeto, tenho a oportunidade de dar um passo além e fazer a diferença na vida de indivíduos que buscam crescer e se destacar no mundo da tecnologia.
 
 Se você estiver interessado em saber mais sobre este projeto ou gostaria de se envolver, sinta-se à vontade para entrar em contato. Juntos, podemos criar um futuro mais promissor na área de tecnologia!
 
