--- a/_posts/2024-07-21-kcd.md
+++ b/_posts/2024-07-21-kcd.md
@@ -11,4 +11,6 @@ tags: [Voluntariado, Organizador Eventos – KCD Floripa Brazil]
 
 KCDs (Kubernetes Community Days) são eventos organizados pela comunidade que reúnem pessoas interessadas (técnicas ou não) na comunidade nativa da nuvem e de código aberto, com o objetivo de promover educação, colaboração e networking. Os eventos do KCDs são oficialmente suportados pela Cloud Native Computing Foundation (CNCF). Esses eventos são realizados pela comunidade localmente, a fim de contribuir para o crescimento e sustentação da comunidade nativa da nuvem. Todos são muito bem-vindos!
 
-https://community.cncf.io/kcd-brasil/
+[KCD Floripa 2024](https://community.cncf.io/kcd-brasil/)
+
+![](https://stoblobcertificados011.blob.core.windows.net/imagens-blog/posts/kcd-floripa.png)
