--- a/_posts/2024-03-27-spotify.md
+++ b/_posts/2024-03-27-spotify.md
@@ -17,8 +17,11 @@ Neste blog post, compartilho minha jornada na plataforma Spotify através do Pod
 
 ### Episódios Destacados
 
+#### #08 Como é o Dia a Dia de um DevOps Engineer com Antonio Junior
+[![#08 Como é o Dia a Dia de um DevOps Engineer com Antonio Junior](https://stoblobcertificados011.blob.core.windows.net/imagens-blog/spotify/8.png)](https://open.spotify.com/episode/46jYWZ4b0A3SNizHQQmYf7?si=e47dd3e6c93b4355)
+
 #### #07 De Veterinária a Cloud Architect com Paula Santos
-[![#06 Episódio Especial TDC Floripa 2024](https://stoblobcertificados011.blob.core.windows.net/imagens-blog/spotify/07.png)](https://open.spotify.com/episode/5X09Dit6uToYU0ICrjOvuW?si=d48c26f5b5cc427b)
+[![#07 De Veterinária a Cloud Architect com Paula Santos](https://stoblobcertificados011.blob.core.windows.net/imagens-blog/spotify/07.png)](https://open.spotify.com/episode/5X09Dit6uToYU0ICrjOvuW?si=d48c26f5b5cc427b)
 
 #### #06 Episódio Especial TDC Floripa 2024
 [![#06 Episódio Especial TDC Floripa 2024](https://stoblobcertificados011.blob.core.windows.net/imagens-blog/spotify/06.png)](https://open.spotify.com/episode/2N4iuH2jSuF7m0mp7t1TEl?si=275768fb0ae244cf)
